syntax = "proto3";

package user;

option go_package = "proto/user/;user";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
  // User
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc CreateOrUpdateUser (CreateOrUpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUserById (DeleteUserByIdRequest) returns (google.protobuf.Empty);

  // OrganizationUser
  rpc GetOrganizationUserByUserIdAndOrganizationId (GetOrganizationUserByUserIdAndOrganizationIdRequest) returns (GetOrganizationUserByUserIdAndOrganizationIdResponse);
  rpc CreateOrganizationUser (CreateOrganizationUserRequest) returns (CreateOrganizationUserResponse);
  rpc DeleteOrganizationUserByUserId (DeleteOrganizationUserByUserIdRequest) returns (DeleteOrganizationUserByUserIdResponse);
  rpc DeleteOrganizationUserByOrganizationId (DeleteOrganizationUserByOrganizationIdRequest) returns (DeleteOrganizationUserByOrganizationIdResponse);

  // Organization
  rpc GetOrganizationById (GetOrganizationByIdRequest) returns (GetOrganizationByIdResponse);
  rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationResponse);
  rpc UpdateOrganization (UpdateOrganizationRequest) returns (UpdateOrganizationResponse);
  rpc DeleteOrganizationById (DeleteOrganizationByIdRequest) returns (DeleteOrganizationByIdResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool valid = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message OrganizationUser {
  int32 id = 1;
  string user_id = 2;
  int32 group_id = 3;
  bool valid = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Organization {
  int32 id = 1;
  string user_id = 2;
  string name = 3;
  bool valid = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// User
message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message CreateOrUpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message DeleteUserByIdRequest {
  string id = 1;
}

// Organization
message GetOrganizationUserByUserIdAndOrganizationIdRequest {
  string user_id = 1;
  int32 organization_id = 2;
}

message GetOrganizationUserByUserIdAndOrganizationIdResponse {
  OrganizationUser organization_user = 1;
}

message CreateOrganizationUserRequest {
  string user_id = 1;
  int32 organization_id = 2;
}

message CreateOrganizationUserResponse {
  OrganizationUser organization_user = 1;
}

message DeleteOrganizationUserByUserIdRequest {
  string user_id = 1;
}

message DeleteOrganizationUserByUserIdResponse {
  OrganizationUser organization_user = 1;
}

message DeleteOrganizationUserByOrganizationIdRequest {
  int32 organization_id = 1;
}

message DeleteOrganizationUserByOrganizationIdResponse {
  OrganizationUser organization_user = 1;
}

// Organization
message GetOrganizationByIdRequest {
  int32 id = 1;
}

message GetOrganizationByIdResponse {
  Organization organization = 1;
}

message CreateOrganizationRequest {
  string name = 1;
}

message CreateOrganizationResponse {
  Organization organization = 1;
}

message UpdateOrganizationRequest {
  string name = 1;
}

message UpdateOrganizationResponse {
  Organization organization = 1;
}

message DeleteOrganizationByIdRequest {
  int32 id = 1;
}

message DeleteOrganizationByIdResponse {
  Organization organization = 1;
}